# xml-editor

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile  conf-editor.desktop  config.hh.in  readme.md  xml-editor.desktop
cmake/: conf-editor-config.cmake  xml-editor-config.cmake
data/: LocalConf.xml
icons/conf-editor/: xml.qrc
icons/tango/: tango.qrc
icons/xml-editor/: xml.qrc
lang/: conf-editor_fr.qm  conf-editor_fr.ts
manpages/: xml-editor.1.fr.txt  xml-editor.1.txt
src/: categories-view.cc  categories-view.hh  conf-model.cc  conf-model.hh  conf-proxy-model.cc  conf-proxy-model.hh  filter-lineedit.cc  filter-lineedit.hh  home.cc  home.hh  keys-view.cc  keys-view.hh  main-window.cc  main-window.hh  main.cc  preferences.cc  preferences.hh  table-view.cc  table-view.hh
src/utils/: tango-colors.hh
